# particles

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  vcpkg.json
shaders/: particle.comp  particle.frag  particle.vert
src/: CMakeLists.txt  buffer.cpp  buffer.h  check.h  deletion_queue.cpp  deletion_queue.h  descriptor_layout.cpp  descriptor_layout.h  image.cpp  image.h  init.cpp  init.h  main.cpp  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  swapchain.cpp  swapchain.h
src/particles/: particle.cpp  particle.h  simulation_settings.h
src/push_constants/: view_projection.h
